<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BookSearchApp</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_hisr">History</string>
    <string name="nav_more">More</string>
    <string name="path_img">Path Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_clicked">DataClickedActivity</string>
    <string name="ellis_address">Address : 1020 Lowry Street, Columbia, MO 65201</string>
    <string name="ellis_call_num">Call Number : (573) 882 4701</string>
    <string name="hour_version">Last updated : %1$s</string>
    <string name="current_version">Last modified : %1$s</string>
    <string name="summary1"> Created by YoungBin Ha</string>
    <string name="summary2"> Student Assistant IT, Library Technical Service</string>
    <string name="no_internet_connection">There is no internet Connection. The default time value will be shown</string>

    <string name="hour_default_title">No Internet Connection</string>
    <string name="hour_default_monday">12:00 am - 12:00 am\nOpen 24 Hours</string>
    <string name="hour_default_tuesday">12:00 am - 12:00 am\nOpen 24 Hours</string>
    <string name="hour_default_wednesday">12:00 am - 12:00 am\nOpen 24 Hours</string>
    <string name="hour_default_thursday">12:00 am - 12:00 am\nOpen 24 Hours</string>
    <string name="hour_default_friday">12:00 am - 12:00 am\nCloses at Midnight</string>
    <string name="hour_default_saturday">8:00 am - 12:00 am\nCloses at Midnight</string>
    <string name="hour_default_sunday">12:00 am - 12:00 am\nOpen 24 Hours</string>
    <string name="hour_default_detail">There is no internet Connection. The default time value will be shown</string>

</resources>
