<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/menuinfo_updated_date"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_color"
        android:text="@string/current_version"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/summary1"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textColor="#A3A1A1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/summary2"
        android:textAlignment="center"
        android:fontFamily="sans-serif-light"
        android:textColor="#A3A1A1"/>
</LinearLayout>