<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:shrinkColumns="*"
            android:background="@drawable/shape"
            android:backgroundTint="#9E938F">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/menuinfo_hours_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text=""
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#C49B8E"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Monday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_monday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_monday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Tuesday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_tuesday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_tuesday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Wednesday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_wednesday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_wednesday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Thursday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_thurday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_tuesday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Friday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_friday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_friday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Saturday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_saturday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_saturday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C9C3C3"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="Sunday"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/menuinfo_hours_sunday"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_sunday"
                    android:textSize="13sp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>
            </TableRow>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#C49B8E"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/menuinfo_hours_detail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/hour_default_detail"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@android:color/white"/>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/menuinfo_hours_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Renew"/>
    </LinearLayout>


</FrameLayout>